# jellyfin-segment-editor

./: CHANGELOG.md  Dockerfile  README.md  cliff.toml  package-lock.json  package.json  quasar.config.js  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  mobile.yaml  release.yaml
docs/: dev.md
public/: splashscreen.html
src/: App.vue
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/boot/: i18n.ts  notify-defaults.js
src/components/: FilterView.vue
src/components/btn/: PlusNewSegment.vue
src/components/image/: BlurhashImage.vue  ItemImage.vue
src/components/player/: Player.vue  PlayerEditor.vue  PlayerScrubber.vue
src/components/plugins/: ChapterDialog.vue  EdlDialog.vue
src/components/segment/: EditorSeasons.vue  SegmentAdd.vue  SegmentEdit.vue  SegmentSlider.vue  SegmentVisual.vue  SegmentsBar.vue
src/components/settings/: AppSettings.vue  AuthSettings.vue  PluginSettings.vue  SettingsDialog.vue
src/composables/: BlurhashWorker.ts  api.ts  dialog.ts  fetch.ts  locales.ts  mediaCapabilities.ts  pluginChapterApi.ts  pluginEdlApi.ts  pluginIntroSkipper.ts  pluginMediaSegmentsApi.ts  segmentApi.ts  tauri.ts  utils.ts  videoApi.ts
src/css/: app.scss
src/globals/: components.d.ts  env.d.ts
src/interfaces/: index.ts
src/layouts/: MainLayout.vue
src/pages/: AlbumPage.vue  ArtistPage.vue  IndexPage.vue  PlayerPage.vue  SeriesPage.vue
src/router/: index.ts  routes.ts
src/stores/: api.ts  app.ts  index.ts  items.ts  loadup.ts  modal.ts  plugin.ts  segments.ts  session.ts
(+7 files in other folders)
