[package]
name = "app"
version = "0.5.3"
description = "Segment Editor for Jellyfin"
authors = ["Endrl", "Intro-Skipper contributors <intro-skipper.org>"]
license = "Apache"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "^1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.0", features = [] }
tauri-plugin-window-state = { version = "^2" }
tauri-plugin-devtools = "2.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
